--- a/cfg_chc.tex
+++ b/cfg_chc.tex
@@ -1,14 +1,14 @@
 \section{Control-Flow Graph to Horn Clauses}
 
-From control-flow graphs we can generate Horn clauses that enable the use of powerful of-the-shelf smt solvers for verification. For each transition in the graph, we create a constrained Horn Clause with the following structure:
+From control-flow graphs we can generate Horn clauses that enable the use of powerful off-the-shelf SMT solvers for verification. For each transition in the graph, we create a constrained Horn Clause with the following structure:
 
 \begin{align*}
 \text{Current\_Relation} \land \text{Condition} \land \text{SSA} \implies \text{Next\_Relation}
 \end{align*}
 
-The Current\_Relation represents the source node of the transition, the Condition is the predicate associated with the transition, the SSA models the statements stored in the source node in Single Static Assignment format, and, finally, the Next\_Relation represents the target node of the transition. All the terms in the left-hand side are optional, with their absence being marked by \texttt{true}. A clause without its Current\_Relation models the constructor, while a missing SSA term indicates an empty node; conditions with value \texttt{true} are omitted for brevity.
+The Current\_Relation represents the source node of the transition, the Condition is the predicate associated with the transition, the SSA models the statements stored in the source node in Single Static Assignment format, and, finally, the Next\_Relation represents the target node of the transition. All the terms in the left-hand side are optional, being replaced by \texttt{true} values in case of absence. A clause without its Current\_Relation models the constructor, while a missing SSA term indicates an empty node in the graph; \texttt{true} values are omitted for brevity.
 
-Our model allows only for constrained, also called linear, Horn clauses, with rules containing only a one to one link between relations. Non-linearity, with many to one links, can arise from recursive calls, but these are removed during the generation of the control-flow graph through inlining.
+Our model allows only for constrained, also called linear, Horn clauses, with rules containing only a one to one link between relations. Non-linearity, with many to one links, can arise from recursive calls, but these are removed during the generation of the control-flow graph, through inlining.
 
 We now present the result of translating the graph in Figure \ref{fig:cfg_contract-c} into Horn clauses. First, all the relations and variables need to be declared, as shown in Figure \ref{fig:chc_rel-and-var}; FB and Avg stand for the fallback and average functions, respectively. Each relation has a set of parameters, which are the variables used in their context; state variables are present in all relations, while local variables only the relations modelling their function. Two versions of the \texttt{sum} and \texttt{count} variables are defined, due to SSA.
 
@@ -32,7 +32,7 @@ The second step is to define the rules that model each transition, as shown in F
 
 The values of the variables are carried through the application of each rule, with, for example, the values of sum\_0 and count\_0 in the second rule being both 0. The SSA is local to each rule, always starting from sum\_0 and count\_0, as can be seen in the difference between the Next\_Relation of the fifth rule and the Current\_Relation of the sixth rule.
 
-\begin{figure}[ht]
+\begin{figure}[p]
 	\centering
 	\begin{align*}
 	(\text{rule } & (\text{Constructor 0 0}))
@@ -51,8 +51,8 @@ The values of the variables are carried through the application of each rule, wi
     \\
 	(\text{rule } & (\implies \\
     & (\text{and } (\text{FB0 msg.val sum\_0 count\_0}) \\
-    & \hspace{0.76cm} (>\text{msg.val 0}) \ (\leq\text{(+ sum\_0 msg.val) 1000000}) \\
-    & \hspace{0.76cm} (\text{= sum\_1 (+ sum\_0 msg.val)}) \ (\text{= count\_1 (+ count\_0 1}))) \\ 
+    & \hspace{0.83cm} (>\text{msg.val 0}) \ (\leq\text{(+ sum\_0 msg.val) 1000000}) \\
+    & \hspace{0.83cm} (\text{= sum\_1 (+ sum\_0 msg.val)}) \ (\text{= count\_1 (+ count\_0 1}))) \\ 
     & (\text{FBSink sum\_1 count\_1})))
     \\
     (\text{rule } & (\implies \\
@@ -60,15 +60,18 @@ The values of the variables are carried through the application of each rule, wi
     & (\text{Interface sum\_0 count\_0})))
     \\
     (\text{rule } & (\implies \\
-    & (\text{and } (\text{Avg0 sum\_0 count\_0}) \ (>\text{count\_0 0}) \ (\text{= avg (/ sum\_0 count\_0)})) \\ 
+    & (\text{and } (\text{Avg0 sum\_0 count\_0}) \\
+    & \hspace{0.83cm} (>\text{count\_0 0}) \ (\text{= avg (/ sum\_0 count\_0)})) \\ 
     & (\text{Avg1 avg sum\_0 count\_0})))
     \\
     (\text{rule } & (\implies \\
-    & (\text{and } (\text{Avg1 avg sum\_0 count\_0}) \ (\leq\text{avg 0})) \\ 
+    & (\text{and } (\text{Avg1 avg sum\_0 count\_0}) \\
+    & \hspace{0.83cm} (\leq\text{avg 0})) \\ 
     & (\text{Error})))
     \\
     (\text{rule } & (\implies \\
-    & (\text{and } (\text{Avg1 avg sum\_0 count\_0}) \ (>\text{avg 0})) \\ 
+    & (\text{and } (\text{Avg1 avg sum\_0 count\_0}) \\
+    & \hspace{0.83cm} (>\text{avg 0})) \\ 
     & (\text{AvgSink sum\_0 count\_0})))
     \\
     (\text{rule } & (\implies \\
@@ -85,7 +88,7 @@ With our encoding the verification of asserts is transformed into a reachability
 (\text{query Error :print-certificate true})
 \end{align*}
 
-This query checks if Error can be reached by applying the provided rules. If it can be reached, the SMT solver provides a \texttt{sat} result, otherwise it outputs \texttt{unsat}. In addition to the query, we also require the certificate to be provided by the SMT solver. This is an automatically generated invariant about the contract. The assert of our running example is not violated, the generated invariant is shown below:
+This query checks if Error can be reached by applying the provided rules. If it can be reached, the SMT solver provides a \texttt{sat} result, otherwise it outputs \texttt{unsat}. In addition to the query, we also require the certificate to be provided by the SMT solver. This is an automatically generated invariant about the contract. The assert of our running example is not violated, and the generated invariant is shown below:
 
 \begin{align*}
 & (\forall \text{ ((A Int) } \text{(B Int))} \\
@@ -93,7 +96,7 @@ This query checks if Error can be reached by applying the provided rules. If it 
 & \hspace{1cm} \text{(= (Interface A B) (and (} \geq \text{A 0) (or a!1 (} \leq \text{B 0))}\text{))))}
 \end{align*}
 
-This is an invariant of the interface, which means that it holds for the contract as a whole. It can be breached during the execution of a function, but it holds after it ends. This particular invariant ensures that between function calls \texttt{sum} is never negative and that either the average (i.e. \texttt{sum} / \texttt{count}) is positive or \texttt{count} is not positive.
+This is an invariant of the interface, which means that it holds for the contract as a whole. It can be breached during the execution of a function, but it holds after it ends. In this particular case the invariant ensures that between function calls \texttt{sum} is never negative and either the average (i.e. \texttt{sum} / \texttt{count}) is positive or \texttt{count} is not positive.
 
 The generation of invariants at the contract level, instead of at the function level, is a challenge, since they emerge from the interaction of many functions with the state variables. Our approach allows for the automatic generation of contract invariants through the use of off-the-shelf SMT solvers.
 
