IEEE trans class

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,5 @@
-\abstract{
-The Ethereum platform is a public, distributed, blockchain-based database where users submit transactions by invoking contract functions.
+\begin{abstract}
+	The Ethereum platform is a public, distributed, blockchain-based database where users submit transactions by invoking contract functions.
 %
 Verifying contracts code is extremely important considering bugs might cause money losses to interested parties, and  the sources become immutable after deployment.
 %
@@ -8,4 +8,4 @@ Unfortunately, proving safety for assertions in a function often entails conside
 Manually providing contract invariants is an error prone approach because automatic verification would assume them regardless their validity.
 %
 In this work we present a technique for modelling a contract based on Constrained Horn Clauses, using IC3 to automatically learn contract invariants necessary to prove assertions safety.
-}
+\end{abstract}
