--- a/macros.tex
+++ b/macros.tex
@@ -1,1 +1,12 @@
 \newcommand{\constructor}[0]{\ensuremath{\rm Cons}}
+\newtheorem{definition}{Definition}
+\newtheorem{theorem}{Theorem}
+
+\newcommand{\lvar}[0]{\ensuremath{\boldsymbol{l}}}
+\newcommand{\farg}[0]{\ensuremath{\boldsymbol{v}}}
+\newcommand{\svar}[0]{\ensuremath{\boldsymbol{s}}}
+\newcommand{\pred}[0]{\ensuremath{\mathcal{P}}}
+\newcommand{\inP}[0]{\ensuremath{\mathcal{I}}}
+\newcommand{\finP}[0]{\ensuremath{\mathcal{F}}}
+\newcommand{\conP}[0]{\ensuremath{\mathcal{C}}}
+\newcommand{\query}[0]{\ensuremath{\Phi}}
