--- a/model.tex
+++ b/model.tex
@@ -1,7 +1,7 @@
 \newpage
 \section{Model}
 
-Given a contract with storage variables $\svar$,
+Given a contract with state variables $\svar$,
 the control flow graph of a function $f(\farg)$ 
 is the tuple \mbox{$\langle G,\alpha,\omega,\epsilon,\rho\rangle$}.
 \mbox{$G=(V,E,\lambda,\mu)$} 
@@ -11,31 +11,31 @@ $\langle V,V\rangle$,
 \mbox{$\lambda:V\rightarrow\varphi(\lvar,
 \lvar')$}, and \mbox{$\mu:E\rightarrow\varphi(\lvar)$},
 where $\lvar$ is the set of local 
-variables of $f$, and \mbox{$\lvar'=\{x'\mid x\in\lvar\}$}. 
+variables in $f$, and \mbox{$\lvar'=\{x'\mid x\in\lvar\}$}. 
 The CFG blocks $\alpha,\omega\in V$ are respectively the entry 
 block and exit block. The CFG block $\epsilon\in V$ is the block
 representing an assertion error.
-The function \mbox{$\rho:\svar\cup\farg\rightarrow\lvar$} is 
-a injection mapping every storage variable and function 
+Function \mbox{$\rho:\svar\cup\farg\rightarrow\lvar$} is 
+an injection mapping every state variable and function 
 argument to a distinct local variable. 
 
 During the execution of $f$ only local variables are manipulated. If
-the execution concludes without errors, the storage variables
-are updated with the respective local variables values
+the execution concludes without errors, the state variables
+are updated with the respective local values
 provided by $\rho$.
 %
-The function $\lambda$ maps each CFG block to 
+Function $\lambda$ maps each CFG block to 
 the SSA formula modelling such block behaviour, setting for each 
 $x\in\lvar$, the value $x'$ resulting from the block
 execution.
-The function $\mu$ maps each transition to the condition 
+Function $\mu$ maps each transition to the condition 
 under which such transition is taken.
 For each \mbox{$\mathsf{assert}(\sigma(\lvar))$} in the 
 source code of a block $v\in V$, an edge 
 \mbox{$e=\langle v,\epsilon\rangle$}, with \mbox{$\mu(e)=\sigma$}
 is added to $E$.
 
-\subsection{CHCs of a function}
+\subsection{Solidity function as CHCs}
 Given the control flow graph 
 \mbox{$\langle G,\alpha,\omega,\epsilon,\mu\rangle$} 
 of a function $f(\farg)$, the set of CHC $\Pi_f$ modelling $f$ 
@@ -45,7 +45,7 @@ as follows.
 For each CFG block $v\in V$, $\pred_v(\lvar)$ 
 is a predicate symbol representing the block.
 
-Let $\inP_f(\svar,\farg)$ the predicate symbol
+Let $\inP_f(\svar,\farg)$ be the predicate symbol
 representing a call to $f(\farg)$ given a contract state $\svar$.
 The following CHC is the {\em initial rule} of $f$.
 \begin{align}
@@ -53,16 +53,16 @@ The following CHC is the {\em initial rule} of $f$.
 \forall\svar,\farg\cdot\inP_f(\svar,\farg)\bigwedge_{x\in\svar\cup\farg}x=\rho(x)\implies\pred_\alpha(\lvar)
 \end{align}
 
-Let $\finP_f(\svar)$ the predicate symbol
+Let $\finP_f(\svar)$ be the predicate symbol
 representing the end of a call to $f$, and the consequent
-update of storage variables. The following CHC is the 
+update of state variables. The following CHC is the 
 {\em final rule} of $f$.
 \begin{align}
 \label{eq:CHC-final}
 \forall\lvar\cdot\pred_\omega(\lvar)\bigwedge_{x\in\svar}x=\rho(x)\implies\finP_f(\svar)
 \end{align}
 
-Finally, the set of rules representing the execution of $f$ is defined as following.
+Finally, the set of rules representing the execution of $f$ is defined as follows.
 For each transition $e=\langle v,w\rangle\in E$,
 \begin{align}
 \label{eq:CHC-transition}
@@ -74,7 +74,7 @@ consisting of the initial rule from \cref{eq:CHC-initial},
 the final rule from \cref{eq:CHC-final}, and all the 
 rules in the set from \cref{eq:CHC-transition}.
 
-\subsection{CHCs of a contract}
+\subsection{Solidity contract as CHCs}
 This section presents how to construct the set of CHC 
 modelling any possible behaviour of a contract.
 Let $\conP(\svar)$ the predicate representing the contract state.
@@ -99,11 +99,10 @@ the following rule represents a call to $f$.
 \forall\svar,\farg\cdot\conP(\svar)\implies\inP_f(\svar,\farg)
 \end{align}
 
-Every transaction which function execution
-leads no errors results in the contract state being updated
-accordingly to the function. 
+Every error-free transaction results in the contract state being updated
+according to the called function.
 For each function $f$ in the contract, 
-the following rule represents a storage state update
+the following rule represents a state update
 according to $f$.
 \begin{align}
 \label{eq:CHC-call-final}
@@ -153,10 +152,3 @@ or a safe inductive invariant proving no assertion error
 is reachable. Any formula $\varphi(\svar)$ implied by a
 safe inductive invariant is by \cref{def:contract-invariant}
 a contract invariant.
-
-
-
-
-
-
-
