Add implementation section

--- a/main.tex
+++ b/main.tex
@@ -62,8 +62,7 @@
 \input{introduction}
 \input{background}
 \input{model}
-\input{solidity_cfg}
-\input{cfg_chc}
+\input{implementation}
 \input{conclusions}
 
 \bibliography{references}
